feat: Integrate Facebook SDK
Integrates the Facebook SDK into the application.

- Adds the `facebook-android-sdk` dependency and its version to `libs.versions.toml`.
- Includes the Facebook SDK implementation in `app/build.gradle.kts`.
- Adds the `INTERNET` permission to `AndroidManifest.xml`.
- Configures the `facebook_app_id` in `strings.xml` and references it in `AndroidManifest.xml` via a meta-data tag.
- Includes commented-out SDK initialization code in `SuperHeroApplication`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
 	<string name="app_name">Super Hero App</string>
+	<string name="facebook_app_id">910699418117290</string>
 </resources>
