--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
 	<string name="app_name">Super Hero App</string>
 	<string name="facebook_app_id">910699418117290</string>
+	<string name="facebookClientID">1b0fabeefacaaebfb9eba33e132f4235</string>
+	<string name="facebookAccessIdentifier">EAAM8RrtQZAKoBQg61NzvYhKfzQjksgVprrtp2ZCHyx99YJICfilv5sCJJ38E4S85KODTPJPHtvvGiyRoW5qLG7QpZAUZCQNm2bu7ZAJEvS1UyhAUJ54mW3BWgy64rmH2ae6ASi9FvKkbjZBrtYXZAZCLAlNbMXebguKGO3zTZBRNd2nZAyOb8ZCrwoWtr7dgjGO</string>
 </resources>
